tuning kafka streaming